[package]
name = "hikweb-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
quick-xml = "0.26.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
async-trait = "0.1.58"
serde = { version = "1.0.147", features = ["derive"] }
futures = "0.3.25"
thiserror = "*"
chrono = { version = "0.4.22", features=["serde"] }
tokio = { version = "1.21.2", features = ["full"] }
