[package]
name = "hikweb-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "hikweb_rs_lib"
path = "src/lib.rs"

[dependencies]
serde-xml-rs = { git = "https://github.com/rojer-98/serde-xml-rs.git" }  
reqwest = { version = "0.11", features = ["json", "blocking"] }
async-trait = "0.1.58"
serde = { version = "1.0.147", features = ["derive"] }
futures = "0.3.25"
thiserror = "*"
chrono = { version = "0.4.22", features=["serde"] }
tokio = { version = "1.21.2", features = ["full"] }
digest = { git = "https://github.com/rojer-98/digest.git" }
log = "0.4.17" 
anyhow = "1.0.53"
url = "2.3.1"   
convert_case = "0.6.0"  
